test/good/09-13-nested-functions-with-static-binding.bq
int x = 1;
{
    def int f(int dummy) {
        x = x + 1;
        return 0;
    }
    f(0);
    print x; // == 2
    int x = 20;
    f(0);
    print x; // == 20
}
