test/bad/no-return-from-non-void-function.bq
def int fun(int x) {
    print "test";
}
fun(0);
